# inception

./: README.md  gitup.sh  project_tree.txt  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
src/inception/: __init__.py
src/inception/base/: __init__.py
src/inception/optimizers/: __init__.py  gradient_descent.py  mini_batch_gradient_descent.py  momentum.py  stochastic_gradient_descent.py
src/inception/utils/: utils.py
tests/optimizers/: test_optimizers.py
tests/utils/: test_utils.py
